# AiReceiptChecker_bot

./: .env.production  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  settings.py  templates.py  utils.py
operations/: __init__.py  metadata.py  signatures.py
