[tool.poetry]
name = "aireceiptchecker-bot"
version = "0.1.0"
description = ""
authors = ["Artem Zhitihin <71713499+qTemiO@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.14.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
